syntax = "proto3";

package hef;
option go_package = "purple-hailo/pkg/hef/proto;hefpb";
option optimize_for = LITE_RUNTIME;

message ProtoHEFHef {
    ProtoHEFHeader header = 1;
    repeated ProtoHEFNetworkGroup network_groups = 2;
    bytes mapping = 3;
    ProtoHEFIncludedFeatures included_features = 4;
    repeated ProtoHEFExtension extensions = 5;
    repeated ProtoHEFOptionalExtension optional_extensions = 6;
    repeated ProtoHEFExternalResource external_resources = 7;
}

message ProtoHEFExternalResource {
    uint64 offset = 1;
    uint64 size = 2;
    string name = 3;
}

message ProtoHEFIncludedFeatures {
    bool abbale = 1;
    bool posted_writes = 2;
    bool ddr = 3;
    bool is_multi_context = 4;
    bool compressed_params = 5;
    bool transpose_component = 6;
    bool padded_ddr_buffers = 7;
    bool sequencer = 8;
}

enum ProtoHEFExtensionType {
    ABBALE = 0;
    POSTED_WRITES = 1;
    DDR = 2;
    PADDED_DDR_BUFFERS = 3;
    IS_MULTI_CONTEXTS = 4;
    COMPRESSED_PARAMS = 5;
    TRANSPOSE_COMPONENT = 6;
    TEST_ONE = 7;
    MULTI_NETWORK_VARIABLE_BATCH_SIZE = 8;
    IS_NMS_MULTI_CONTEXT = 9;
    OFFLOAD_ARGMAX = 10;
    HW_PADDING = 11;
    KO_RUN_ASAP = 12;
    HAILO_NET_FLOW = 13;
    HAILO_NET_FLOW_YOLOV5_NMS = 14;
    HAILO_NET_FLOW_YOLOX_NMS = 15;
    HAILO_NET_FLOW_SSD_NMS = 16;
    HAILO_NET_FLOW_IOU_NMS = 17;
    WRITE_DATA_BY_TYPE = 18;
    NMS_OUTPUT_BURST = 19;
    DUAL_DIRECTION_STREAM_INDEX = 20;
    HAILO_NET_FLOW_ARGMAX = 21;
    HAILO_NET_FLOW_SOFTMAX = 22;
    ALIGNED_FORMAT_TYPE = 23;
    HAILO_NET_FLOW_YOLOV5_SEG_NMS = 24;
    OUTPUT_SCALE_PER_FEATURE = 25;
    PERIPH_CALCULATION_IN_HAILORT = 26;
    HAILO_NET_FLOW_YOLOV8_NMS = 27;
    BATCH_REGISTER_CONFIG = 28;
    HAILO_NET_FLOW_BBOX_DECODING = 29;
    CCW_PTR_SQUEEZE = 30;
    EXTERNAL_RESOURCES = 31;
    SHARED_CONFIG = 32;
    // Note: 0XFFFF is not valid for proto3 enum, skipping UNUSED
}

message ProtoHEFExtension {
    uint32 type_index = 1;
    string name = 2;
}

message ProtoHEFOptionalExtension {
    uint32 type_index = 1;
    string name = 2;
}

message ProtoHEFHeader {
    ProtoHEFHwArch hw_arch = 1;
    uint64 timestamp = 2;
    string sdk_version = 3;
    uint64 version = 4;
}

enum ProtoHEFHwArch {
    PROTO__HW_ARCH__HAILO8 = 0;
    PROTO__HW_ARCH__HAILO8P = 1;
    PROTO__HW_ARCH__HAILO8R = 2;
    PROTO__HW_ARCH__HAILO8L = 3;
    PROTO__HW_ARCH__HAILO15M = 4;
    PROTO__HW_ARCH__HAILO10H = 5;
    PROTO__HW_ARCH__HAILO15L = 6;
    PROTO__HW_ARCH__SAGE_A0 = 100;
    PROTO__HW_ARCH__SAGE_B0 = 101;
    PROTO__HW_ARCH__PAPRIKA_B0 = 102;
    PROTO__HW_ARCH__HAILO15H = 103;
    PROTO__HW_ARCH__GINGER = 104;
    PROTO__HW_ARCH__LAVENDER = 105;
    PROTO__HW_ARCH__PLUTO = 106;
}

message ProtoHEFPhysicalLayout {
    uint32 partial_clusters_layout_bitmap = 1;
}

message ProtoHEFPartialNetworkGroup {
    ProtoHEFNetworkGroup network_group = 1;
    ProtoHEFPhysicalLayout layout = 2;
}

message ProtoHEFPartialCoreOp {
    ProtoHEFCoreOp core_op = 1;
    ProtoHEFPhysicalLayout layout = 2;
}

message ProtoHEFCoreOp {
    ProtoHEFNetworkGroupMetadata network_group_metadata = 1;
    ProtoHEFPreliminaryConfig preliminary_config = 2;
    repeated ProtoHEFContext contexts = 3;
    repeated string sorted_outputs_order = 4;
    ProtoHEFFusedLayersMetadata fused_layers_metadata = 5;
    repeated string networks_names = 6;
    repeated ProtoHEFPartialCoreOp partial_core_ops = 7;
}

message ProtoHEFYoloBboxDecoder {
    repeated uint32 h = 2;
    repeated uint32 w = 3;
    uint32 stride = 4;
    uint32 pad_index = 5;
}

message ProtoHEFYoloNmsOp {
    double image_height = 1;
    double image_width = 2;
    uint32 input_division_factor = 3;
    repeated ProtoHEFYoloBboxDecoder bbox_decoders = 4;
}

message ProtoHEFSSDBboxDecoder {
    repeated float h = 1;
    repeated float w = 2;
    uint32 reg_pad_index = 3;
    uint32 cls_pad_index = 4;
}

message ProtoHEFYoloxBboxDecoder {
    uint32 stride = 1;
    uint32 reg_pad_index = 2;
    uint32 cls_pad_index = 3;
    uint32 obj_pad_index = 4;
}

message ProtoHEFYoloxNmsOp {
    double image_height = 1;
    double image_width = 2;
    repeated ProtoHEFYoloxBboxDecoder bbox_decoders = 3;
}

message ProtoHEFSSDNmsOp {
    double image_height = 1;
    double image_width = 2;
    uint32 centers_scale_factor = 3;
    uint32 bbox_dimensions_scale_factor = 4;
    uint32 ty = 5;
    uint32 tx = 6;
    uint32 th = 7;
    uint32 tw = 8;
    repeated ProtoHEFSSDBboxDecoder bbox_decoders = 9;
}

message ProtoHEFIOUNmsOp {}

message ProtoHEFYoloSegProtoInfo {
    uint32 number = 1;
    uint32 stride = 2;
    string proto_layer = 3;
}

message ProtoHEFYoloSegNmsOp {
    double image_height = 1;
    double image_width = 2;
    repeated ProtoHEFYoloBboxDecoder bbox_decoders = 3;
    ProtoHEFYoloSegProtoInfo proto_info = 4;
    double mask_threshold = 5;
}

message ProtoHEFYolov8BboxDecoder {
    uint32 stride = 1;
    uint32 reg_pad_index = 2;
    uint32 cls_pad_index = 3;
}

message ProtoHEFYolov8NmsOp {
    double image_height = 1;
    double image_width = 2;
    uint32 input_division_factor = 3;
    repeated ProtoHEFYolov8BboxDecoder bbox_decoders = 4;
    uint32 regression_length = 5;
}

message ProtoHEFNmsOp {
    double nms_score_th = 1;
    double nms_iou_th = 2;
    uint32 max_proposals_per_class = 3;
    uint32 classes = 4;
    bool background_removal = 5;
    uint32 background_removal_index = 6;
    bool bbox_decoding_only = 13;
    oneof nms_op {
        ProtoHEFYoloNmsOp yolo_nms_op = 7;
        ProtoHEFYoloxNmsOp yolox_nms_op = 8;
        ProtoHEFSSDNmsOp ssd_nms_op = 9;
        ProtoHEFIOUNmsOp iou_op = 10;
        ProtoHEFYoloSegNmsOp yolo_seg_op = 11;
        ProtoHEFYolov8NmsOp yolov8_nms_op = 12;
    }
}

enum ProtoHEFLogitsType {
    PROTO_HEF_ARGMAX_TYPE = 0;
    PROTO_HEF_SOFTMAX_TYPE = 1;
}

message ProtoHEFLogitsOp {
    ProtoHEFLogitsType logits_type = 1;
}

enum ProtoHEFFormatOrder {
    PROTO__FORMAT__ORDER__AUTO = 0;
    PROTO__FORMAT__ORDER__NHWC = 1;
    PROTO__FORMAT__ORDER__NHCW = 2;
    PROTO__FORMAT__ORDER__FCR = 3;
    PROTO__FORMAT__ORDER__F8CR = 4;
    PROTO__FORMAT__ORDER__NHW = 5;
    PROTO__FORMAT__ORDER__NC = 6;
    PROTO__FORMAT__ORDER__BAYER_RGB = 7;
    PROTO__FORMAT__ORDER__12_BIT_BAYER_RGB = 8;
    PROTO__FORMAT__ORDER__HAILO_NMS = 9;
    PROTO__FORMAT__ORDER__RGB888 = 10;
    PROTO__FORMAT__ORDER__NCHW = 11;
    PROTO__FORMAT__ORDER__YUY2 = 12;
    PROTO__FORMAT__ORDER__NV12 = 13;
    PROTO__FORMAT__ORDER__NV21 = 14;
    PROTO__FORMAT__ORDER__HAILO_YYUV = 15;
    PROTO__FORMAT__ORDER__HAILO_YYVU = 16;
}

enum ProtoHEFDataType {
    PROTO__UINT8 = 0;
    PROTO__UINT16 = 1;
}

enum ProtoHEFFormatType {
    PROTO__FORMAT__TYPE__AUTO = 0;
    PROTO__FORMAT__TYPE__UINT8 = 1;
    PROTO__FORMAT__TYPE__UINT16 = 2;
}

message ProtoHEFTensorShape {
    uint32 height = 1;
    uint32 padded_height = 2;
    uint32 width = 3;
    uint32 padded_width = 4;
    uint32 features = 5;
    uint32 padded_features = 6;
}

message ProtoHEFNmsShape {
    uint32 number_of_classes = 1;
    uint32 max_bboxes_per_class = 2;
    uint32 bbox_size = 3;
    uint32 division_factor = 4;
}

message ProtoHEFPad {
    uint32 index = 1;
    string name = 2;
    ProtoHEFFormatOrder format_order = 3;
    ProtoHEFDataType data_bytes = 4;
    ProtoHEFEdgeLayerNumericInfo numeric_info = 5;
    oneof shape_info {
        ProtoHEFTensorShape tensor_shape = 6;
        ProtoHEFNmsShape nms_shape = 7;
    }
    ProtoHEFFormatType format_type = 8;
}

message ProtoHEFOp {
    string name = 1;
    repeated ProtoHEFPad input_pads = 2;
    repeated ProtoHEFPad output_pads = 3;
    oneof op {
        ProtoHEFCoreOp core_op = 4;
        ProtoHEFNmsOp nms_op = 5;
        ProtoHEFLogitsOp logits_op = 6;
    }
}

message ProtoHEFPadEdge {
    uint32 src = 1;
    uint32 dst = 2;
}

message ProtoHEFNetworkGroup {
    repeated ProtoHEFOp ops = 8;
    repeated ProtoHEFPadEdge pad_edges = 9;
    string network_group_name = 10;
    uint32 network_group_index = 11;
    ProtoHEFNetworkGroupMetadata network_group_metadata = 1;
    ProtoHEFPreliminaryConfig preliminary_config = 2;
    repeated ProtoHEFContext contexts = 3;
    repeated string sorted_outputs_order = 4;
    ProtoHEFFusedLayersMetadata fused_layers_metadata = 5;
    repeated string networks_names = 6;
    repeated ProtoHEFPartialNetworkGroup partial_network_groups = 7;
}

message ProtoHEFCfgChannelConfig {
    uint32 cfg_channel_index = 1;
    uint32 engine_id = 2;
}

message ProtoHEFNetworkGroupMetadata {
    string network_group_name = 1;
    uint32 network_group_index = 2;
    bool transposed_net = 3;
    double bottleneck_fps = 4;
    uint32 cfg_channels_count = 5;
    double latency = 6;
    repeated ProtoHEFCfgChannelConfig cfg_channels_config = 7;
}

message ProtoHEFFusedLayersMetadata {
    bool network_has_fused_layers = 1;
    repeated string updated_sorted_output_names = 2;
    repeated ProtoHEFEdgeLayerFused fused_layers = 3;
}

message ProtoHEFEdgeLayerFused {
    ProtoHEFEdgeLayerInfo layer_info = 1;
    repeated string defused_layers_names = 2;
    ProtoHEFNmsInfo nms_info = 3;
}

message ProtoHEFContext {
    uint32 context_index = 1;
    repeated ProtoHEFOperation operations = 2;
    ProtoHEFContextMetadata metadata = 3;
}

message ProtoHEFOperation {
    ProtoHEFTrigger trigger = 1;
    repeated ProtoHEFAction actions = 2;
}

message ProtoHEFTrigger {
    uint32 unique_id = 1;
    oneof trigger {
        ProtoHEFTriggerLcu trigger_lcu = 2;
        ProtoHEFTriggerNone trigger_none = 3;
        ProtoHEFTriggerAllDataWasSentToHostPCIe trigger_all_data_was_sent = 4;
        ProtoHEFTriggerAllDataWasReceivedFromHostPCIe trigger_all_data_was_received = 5;
        ProtoHEFTriggerNms trigger_nms = 6;
        ProtoHEFWaitDmaIdleTrigger trigger_dma_idle = 7;
    }
}

message ProtoHEFTriggerLcu {
    uint32 cluster_index = 1;
    uint32 lcu_index = 2;
}

message ProtoHEFTriggerNms {
    uint32 aggregator_index = 1;
    uint32 pred_cluster_ob_index = 2;
    uint32 pred_cluster_ob_cluster_index = 3;
    uint32 pred_cluster_ob_interface = 4;
    uint32 succ_prepost_ob_index = 5;
    uint32 succ_prepost_ob_interface = 6;
}

message ProtoHEFTriggerNone {}

message ProtoHEFTriggerAllDataWasSentToHostPCIe {
    uint32 shmifo_index = 1;
}

message ProtoHEFTriggerAllDataWasReceivedFromHostPCIe {
    uint32 shmifo_index = 1;
}

message ProtoHEFWaitDmaIdleTrigger {
    uint32 shmifo_index = 1;
}

message ProtoHEFAction {
    uint32 unique_id = 1;
    oneof action {
        ProtoHEFActionWriteData write_data = 2;
        ProtoHEFActionWriteDataCcw write_data_ccw = 3;
        ProtoHEFActionWriteCompressedData write_compressed_data = 4;
        ProtoHEFActionEnableSequencer enable_sequencer = 5;
        ProtoHEFActionWaitForSequencer wait_for_seqeuncer = 6;
        ProtoHEFActionDisableLcu disable_lcu = 7;
        ProtoHEFActionEnableLcu enable_lcu = 8;
        ProtoHEFActionNone none = 9;
        ProtoHEFActionAllowInputDataflow allow_input_dataflow = 10;
        ProtoHEFActionWaitForModuleConfigDone wait_for_module_config_done = 11;
        ProtoHEFActionDebug debug = 12;
        ProtoHEFActionEnableNMS enable_nms = 13;
        ProtoHEFActionWriteDataByType write_data_by_type = 14;
        ProtoHEFActionSwitchLcuBatch switch_lcu_batch = 15;
        ProtoHEFActionWriteDataCcwPtr write_data_ccw_ptr = 16;
    }
}

message ProtoHEFActionWriteDataCcwPtr {
    uint64 offset = 1;
    uint32 size = 2;
    uint32 cfg_channel_index = 3;
}

message ProtoHEFActionWriteData {
    uint64 address = 1;
    bytes data = 2;
}

message ProtoHEFActionWriteDataCcw {
    bytes data = 1;
    uint32 cfg_channel_index = 2;
}

enum ProtoHEFDebugType {
    SLEEP = 0;
    HALT = 1;
}

message ProtoHEFActionDebugHalt {}

message ProtoHEFActionWriteCompressedData {
    uint64 address = 1;
    bytes data = 2;
}

message ProtoHEFActionDebugSleep {
    uint64 duration_in_usec = 1;
}

message ProtoHEFActionDebug {
    ProtoHEFDebugType type = 1;
    oneof action {
        ProtoHEFActionDebugSleep sleep = 2;
        ProtoHEFActionDebugHalt halt = 3;
    }
}

enum ProtoHEFWriteDataType {
    DATA_FROM_ACTION = 0;
    BATCH_SIZE = 1;
}

message ProtoHEFActionWriteDataByType {
    uint64 address = 1;
    ProtoHEFWriteDataType data_type = 2;
    bytes data = 3;
    uint32 mask = 4;
    uint32 network_index = 5;
    uint32 shift = 6;
}

message InitialL3 {
    uint32 initial_l3_index = 1;
    uint32 initial_l3_offset = 2;
    bool includes_initial_l3_info = 3;
}

message ProtoHEFActionEnableSequencer {
    uint32 cluster_index = 1;
    uint32 initial_l3_legacy = 2;
    uint32 active_apu_bitmap = 3;
    uint64 active_sc_bitmap = 4;
    uint64 active_l2_bitmap = 5;
    uint32 active_ia_bitmap = 6;
    uint32 l2_write_0 = 7;
    uint32 l2_write_1 = 8;
    uint32 l2_write_2 = 9;
    uint32 l2_write_3 = 10;
    InitialL3 initial_l3_info = 11;
}

message ProtoHEFActionWaitForSequencer {
    uint32 cluster_index = 1;
}

message ProtoHEFActionWaitForModuleConfigDone {
    uint32 index = 1;
}

message ProtoHEFActionDisableLcu {
    uint32 lcu_index = 1;
    uint32 cluster_index = 2;
    uint32 lcu_enable_address = 5;
}

message ProtoHEFActionEnableLcu {
    uint32 lcu_index = 1;
    uint32 cluster_index = 2;
    uint32 lcu_kernel_done_address = 3;
    uint32 lcu_kernel_done_count = 4;
    uint32 lcu_enable_address = 5;
    uint32 network_index = 6;
}

message ProtoHEFActionSwitchLcuBatch {
    uint32 lcu_index = 1;
    uint32 cluster_index = 2;
    uint32 network_index = 6;
}

message ProtoHEFActionEnableNMS {
    uint32 nms_unit_index = 1;
    uint32 network_index = 2;
    uint32 number_of_classes = 3;
    uint32 burst_size = 4;
    uint32 division_factor = 5;
}

message ProtoHEFActionNone {}

message ProtoHEFActionAllowInputDataflow {
    uint32 sys_index = 1;
    ProtoHEFEdgeConnectionType connection_type = 2;
}

message ProtoHEFPreliminaryConfig {
    repeated ProtoHEFOperation operation = 1;
}

message ProtoHEFContextMetadata {
    string name = 1;
    repeated ProtoHEFEdgeLayer edge_layers = 2;
    repeated ProtoHEFClusterEndGuarantee cluster_end_guarantee = 3;
    repeated ProtoHEFOrderedTrigger trigger_order = 4;
    repeated string sorted_outputs_order = 5;
    ProtoHEFHwPackageInfo hw_package_info = 6;
    ProtoHEFShmiglueInfo shmiglue_info = 7;
}

message ProtoHEFShmiglueInfo {
    bool should_use_shmiglue = 1;
    uint32 shmiglue_index = 2;
}

message ProtoHEFEdgeLayer {
    ProtoHEFEdgeLayerDirection direction = 1;
    ProtoHEFEdgeLayerType edge_layer_type = 2;
    oneof edge {
        ProtoHEFEdgeLayerInfo layer_info = 3;
        ProtoHEFEdgeLayerMux layer_mux = 4;
        ProtoHEFEdgeLayerPlanes layer_planes = 8;
    }
    ProtoHEFContextSwitchInformation context_switch_info = 5;
    uint32 network_index = 6;
    optional uint32 pad_index = 7;
}

enum ProtoHEFEdgeLayerDirection {
    PROTO__EDGE_LAYER_DIRECTION__HOST_TO_DEVICE = 0;
    PROTO__EDGE_LAYER_DIRECTION__DEVICE_TO_HOST = 1;
}

enum ProtoHEFEdgeLayerType {
    PROTO__EDGE_LAYER_TYPE__INFO = 0;
    PROTO__EDGE_LAYER_TYPE__MUX = 1;
    PROTO__EDGE_LAYER_TYPE__PLANES = 2;
}

message ProtoHEFEdgeLayerInfo {
    string name = 1;
    ProtoHEFEdgeLayerBase edge_layer_base = 2;
    ProtoHEFEdgeLayerNumericInfo numeric_info = 3;
    string hn_output_layer_name = 4;
    repeated string original_names = 5;
    bool transposed = 6;
}

message ProtoHefEdge {
    oneof edge {
        ProtoHEFEdgeLayerInfo layer_info = 1;
        ProtoHEFEdgeLayerMux layer_mux = 2;
        ProtoHEFEdgeLayerPlanes layer_planes = 3;
    }
}

message ProtoHEFEdgeLayerMux {
    string name = 1;
    ProtoHEFEdgeLayerBase edge_layer_base = 2;
    ProtoHEFEdgeLayerMuxData mux_data = 3;
    string hn_output_layer_name = 4;
    repeated ProtoHefEdge predecessors = 5;
    repeated string original_names = 6;
}

enum ProtoHEFEPlanesFormat {
    PROTO__PLANES__FORMAT__NV12 = 0;
    PROTO__PLANES__FORMAT__NV21 = 1;
    PROTO__PLANES__FORMAT__I420 = 2;
}

message ProtoHEFEdgeLayerPlanes {
    string name = 1;
    ProtoHEFEPlanesFormat planes_format = 2;
    repeated ProtoHefEdge planes = 3;
    uint32 height = 4;
    uint32 width = 5;
    uint32 features = 6;
}

message ProtoHEFEdgeLayerMuxData {
    uint32 number_of_predecessors = 1;
    uint32 height_gcd = 2;
    uint32 height_ratios_list_len = 3;
    repeated uint32 height_ratios_list = 4;
}

enum ProtoHEFEdgeConnectionType {
    PROTO__EDGE_CONNECTION_TYPE__BOUNDARY = 0;
    PROTO__EDGE_CONNECTION_TYPE__INTERMEDIATE = 1;
    PROTO__EDGE_CONNECTION_TYPE__DDR = 2;
    PROTO__EDGE_CONNECTION_TYPE__CACHE = 3;
}

message ProtoHEFContextSwitchInformation {
    uint32 context_index = 1;
    string context_name = 2;
    ProtoHEFEdgeConnectionType edge_connection_type = 3;
    uint32 connected_context_index = 4;
    string connected_context_name = 5;
    uint32 buffers = 6;
    uint32 connected_sys_index = 7;
    repeated ProtoHEFConnectedContextInfo connected_contexts = 8;
    int32 cache_id = 9;
}

message ProtoHEFConnectedContextInfo {
    uint32 index = 1;
    string name = 2;
    uint32 sys_index = 3;
    uint32 engine_id = 4;
}

message ProtoHEFResourceIndices {
    uint32 index = 1;
    uint32 cluster_index = 2;
}

message ProtoHEFEdgeLayerBase {
    uint32 height = 1;
    uint32 padded_height = 2;
    uint32 width = 3;
    uint32 padded_width = 4;
    uint32 features = 5;
    uint32 padded_features = 6;
    uint32 format = 7;
    uint32 sys_index = 8;
    uint32 core_bytes_per_buffer = 9;
    uint32 core_buffers_per_frame = 10;
    ProtoHEFAdditionalInfo additional_info = 11;
    uint32 data_bytes = 12;
    repeated ProtoHEFResourceIndices buffer_indices = 13;
    bool host_argmax = 14;
    uint32 max_shmifo_size = 15;
    uint32 engine_id = 16;
}

message ProtoHEFAdditionalInfo {
    ProtoHEFNmsInfo nms_info = 1;
}

enum ProtoHEFNmsBurstType {
    PROTO__NMS_BURST_TYPE__NO_BURST = 0;
    PROTO__NMS_BURST_TYPE__H8_PER_CLASS = 1;
    PROTO__NMS_BURST_TYPE__H15_PER_CLASS = 2;
    PROTO__NMS_BURST_TYPE__H15_PER_FRAME = 3;
}

message ProtoHEFNmsInfo {
    uint32 type_index = 1;
    uint64 number_of_classes = 2;
    uint64 max_output_size = 3;
    uint64 bbox_size = 4;
    bool is_defused = 5;
    ProtoHEFNmsDefuseInfo defuse_info = 6;
    uint64 input_division_factor = 7;
    uint32 burst_size = 8;
    ProtoHEFNmsBurstType burst_type = 9;
}

message ProtoHEFNmsDefuseInfo {
    uint64 class_group_index = 1;
    string original_name = 3;
}

message ProtoHEFEdgeLayerNumericInfo {
    float qp_zp = 1;
    float qp_scale = 2;
    float limvals_min = 3;
    float limvals_max = 4;
    repeated double qp_zps = 5;
    repeated double qp_scales = 6;
}

message ProtoHEFOrderedTrigger {
    ProtoHEFTrigger triggers = 1;
    uint64 estimated_time_from_previous_ns = 2;
}

message ProtoHEFClusterEndGuarantee {
    uint32 cluster_index = 1;
    ProtoHEFTrigger trigger = 2;
}

message ProtoHEFHwPackageInfo {
    uint32 dense_alignment_size = 1;
    uint32 axi_width = 2;
    uint32 memory_width = 3;
}
